fix: section margin for first company is too large

--- a/src/style.css
+++ b/src/style.css
@@ -333,6 +333,10 @@ section {
   margin-top: 0;
 }
 
+.work .company:first-of-type {
+  margin-top: 0;
+}
+
 .company + .position {
   margin-top: var(--gap-large);
 }
